<resources>
    <string name="app_name">Вызов такси тест 15</string>
    <string name="action_settings">Настройки</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Основные</string>

    <string name="pref_title_social_recommendations">Недоступно</string>
    <string name="pref_description_social_recommendations">
    </string>

    <string name="pref_title_display_name">Телефонный номер</string>
    <string name="pref_default_display_name"></string>

    <string name="pref_title_add_friends_to_messages">Идентификатор пользователя</string>
    <string-array name="pref_example_list_titles">
        <item>-</item>
        <item>--</item>
        <item>---</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Оповещения</string>

    <string name="pref_title_new_message_notifications">Включить оповещения</string>

    <string name="pref_title_ringtone">Мелодия</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
